--- a/es/bjc-r_es/topic/topic.html
+++ b/es/bjc-r_es/topic/topic.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 
-<html lang="en">
-    <!-- This is the template for BJC topics rendered in html.
+<html lang="en"><!-- This is the template for BJC topics rendered in html.
         Use the form "topic.html?topic=folder/important-learning.topic"
-    -->
-    <head>
-      <title>Beauty and Joy of Computing</title>
+    --><head>
+      <title>El placer y la belleza de la computación</title>
       <script type="text/javascript" src="/bjc-r_es/llab/loader.js"></script>
-    </head>
+    <meta charset="UTF-8"/>
+</head>
     <body>
     </body>
 </html>
